--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.8.1",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
@@ -38,6 +39,7 @@
     "eslint-plugin-vue": "^9.32.0",
     "jiti": "^2.4.2",
     "jsdom": "^26.0.0",
+    "json-server": "^1.0.0-beta.3",
     "npm-run-all2": "^7.0.2",
     "prettier": "^3.5.1",
     "start-server-and-test": "^2.0.10",
