--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@pinia/testing": "^1.0.0",
     "@tsconfig/node22": "^22.0.0",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.13.4",
@@ -42,6 +43,7 @@
     "json-server": "^1.0.0-beta.3",
     "npm-run-all2": "^7.0.2",
     "prettier": "^3.5.1",
+    "sass-embedded": "^1.85.1",
     "start-server-and-test": "^2.0.10",
     "typescript": "~5.7.3",
     "vite": "^6.1.0",
