--- a/package.json
+++ b/package.json
@@ -50,5 +50,9 @@
     "vite-plugin-vue-devtools": "^7.7.2",
     "vitest": "^3.0.5",
     "vue-tsc": "^2.2.2"
+  },
+  "engines": {
+    "node": ">=22.13.1",
+    "npm": ">=10.9.2"
   }
 }
